# anthill-os

./: .gitignore  README.md  aarch64-elf.txt  construct  create_ramdisk  linker.ld  meson.build  run
src/boot/: boot.S  entry.S  meson.build
src/boot/include/: entry.h  sysregs.h
src/common/: debug_printf.c
src/common/include/: debug_printf.h
src/drivers/: build_opts  emmc.c  irq.c  meson.build  timer.c  uart.c
src/drivers/emmc/: build_opts  emmc.c  emmc.h  meson.build
src/drivers/include/: gpio.h  irq.h  timer.h  uart.h
src/drivers/irq/: irq.c
src/drivers/timer/: build_opts  timer.c
src/drivers/uart/: uart.c
src/include/boot/: entry.h  sysregs.h
src/include/drivers/: gpio.h  irq.h  timer.h  uart.h
src/include/kernel/: cpu_context.h  elf.h  errno.h  fork.h  kprintf.h  mm.h  mqueue.h  ramdisk.h  string.h  syscalls.h  tar.h  task.h
src/include/kernel/sys/: types.h
src/kernel/: boot.S  cpu_context.S  elf.c  entry.S  fork.c  kprintf.c  main.c  meson.build  mm.c  mqueue.c  ramdisk.c  scheduler.S  scheduler.c  string.c  syscalls.c  tar.c  task.c
src/kernel/include/: entry.h  fork.h  mm.h  scheduler.h  sysregs.h
src/lib/: meson.build
src/lib/libc/: _malloc.c  build_opts  exit.c  init.c  ld.c  malloc.c  meson.build  mqueue.c  printf.c  syscalls.c
src/lib/libc/crt/: crt0.S
src/lib/libc/ctype/: isdigit.c  isspace.c
src/lib/libc/dirent/: closedir.c  opendir.c  readdir.c  rewinddir.c
src/lib/libc/fcall/: fcall_buf_to_msg.c  fcall_msg_size.c  fcall_msg_to_buf.c  fcall_path_size.c  fcall_path_split.c
src/lib/libc/include/: ctype.h  dirent.h  errno.h  fcall.h  fcntl.h  limits.h  mqueue.h  pstring.h  spawn.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  syscalls.h  unistd.h
src/lib/libc/include/internal/: malloc.h  stdio.h  stdlib.h
src/lib/libc/include/sys/: mman.h  stat.h  types.h  vfs.h
src/lib/libc/internal/: _block.c  _file.c  _formatter.c  _malloc.c  _strtox.c  formatter.c  malloc.c  stdio.c  stdlib.c
src/lib/libc/mqueue/: mq_close.c  mq_receive.c  mq_send.c  mq_unlink.c
src/lib/libc/pstring/: pstrconv.c  pstrdup.c  pstriter.c  pstrlen.c  pstrtoz.c
src/lib/libc/spawn/: posix_spawn.c
src/lib/libc/stdio/: _std.c  fclose.c  fflush.c  fgetc.c  fileno.c  fopen.c  fprintf.c  fputc.c  fputs.c  fread.c  fwrite.c  printf.c  puts.c  snprintf.c  sprintf.c  vfprintf.c  vprintf.c  vsnprintf.c  vsprintf.c
src/lib/libc/stdlib/: calloc.c  exit.c  free.c  malloc.c  realloc.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
src/lib/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strchr.c  strcmp.c  strcnt.c  strcpy.c  strcspn.c  strdup.c  strlen.c  strncpy.c  strrchr.c  strspn.c  strtok.c
src/lib/libc/sys/mman/: mmap.c  munmap.c
src/lib/libc/sys/stat/: fstat.c  stat.c
src/lib/libc/sys/vfs/: vfs_msg.c
src/lib/libc/unistd/: getpid.c  mount.c
src/lib/libvfs/: meson.build  vfs_client_add_fid.c  vfs_client_create.c  vfs_client_fid_add.c  vfs_client_fid_get.c  vfs_client_fid_remove.c  vfs_client_fid_update.c  vfs_client_get.c  vfs_client_get_fid.c  vfs_client_remove.c  vfs_client_remove_fid.c
src/lib/libvfs/include/vfs/: client.h
src/modules/: meson.build
src/modules/pl011/: main.c  meson.build  pl011.c  pl011.h
src/modules/rd/: main.c  meson.build  rd.c  rd.h
src/modules/uart/: main.c  meson.build  uart.c  uart.h
src/modules/vfs/: client.c  client.h  main.c  meson.build  vfs.c  vfs.h  vnode.c  vnode.h
test/kernel/: mm.c  string.c  tar.c
test/lib/libc/: printf.c  stdint.c
