kernel_sources += files([
  'fork.c',
  'kprintf.c',
  'main.c',
  'mm.c',
  'scheduler.c',
  'scheduler.S',
  'syscalls.c',
  'tar.c',
])

kernel_includes += [
  'src' / 'include' / 'kernel' / 'fork.h',
  'src' / 'include' / 'kernel' / 'kprintf.h',
  'src' / 'include' / 'kernel' / 'mm.h',
  'src' / 'include' / 'kernel' / 'scheduler.h',
  'src' / 'include' / 'kernel' / 'syscalls.h',
  'src' / 'include' / 'kernel' / 'string.h',
  'src' / 'include' / 'kernel' / 'tar.h',
]
