kernel_sources += files([
  'elf.c',
  'kprintf.c',
  'main.c',
  'mm.c',
  'ramdisk.c',
  'scheduler.c',
  'scheduler.S',
  'syscalls.c',
  'task.c',
])

kernel_includes += [
  'src' / 'include' / 'kernel' / 'elf.h',
  'src' / 'include' / 'kernel' / 'kprintf.h',
  'src' / 'include' / 'kernel' / 'mm.h',
  'src' / 'include' / 'kernel' / 'ramdisk.h',
  'src' / 'include' / 'kernel' / 'scheduler.h',
  'src' / 'include' / 'kernel' / 'syscalls.h',
  'src' / 'include' / 'kernel' / 'string.h',
  'src' / 'include' / 'kernel' / 'task.h',
]
