kernel_sources += files([
  'cpu_context.S',
  'elf.c',
  'kprintf.c',
  'main.c',
  'mm.c',
  'ramdisk.c',
  'syscalls.c',
  'string.c',
  'task.c',
])

kernel_includes += [
  'src' / 'include' / 'kernel' / 'cpu_context.h',
  'src' / 'include' / 'kernel' / 'elf.h',
  'src' / 'include' / 'kernel' / 'kprintf.h',
  'src' / 'include' / 'kernel' / 'mm.h',
  'src' / 'include' / 'kernel' / 'ramdisk.h',
  'src' / 'include' / 'kernel' / 'syscalls.h',
  'src' / 'include' / 'kernel' / 'string.h',
  'src' / 'include' / 'kernel' / 'task.h',
]
