libc_sources = files([
  'ctype' / 'isdigit.c',
  'ctype' / 'isspace.c',
  'errno' / 'errno.c',
  'fcall' / 'fcall_buf_to_msg.c',
  'fcall' / 'fcall_msg_size.c',
  'fcall' / 'fcall_msg_to_buf.c',
  'fcall' / 'fcall_path_size.c',
  'fcall' / 'fcall_path_split.c',
  'init.c',
  'internal' / '_file.c',
  'internal' / '_formatter.c',
  'internal' / '_malloc.c',
  'internal' / '_strtox.c',
  'mqueue' / 'mq_close.c',
  'mqueue' / 'mq_open.c',
  'mqueue' / 'mq_receive.c',
  'mqueue' / 'mq_send.c',
  'mqueue' / 'mq_unlink.c',
  'pstring' / 'pstrconv.c',
  'pstring' / 'pstrdup.c',
  'pstring' / 'pstriter.c',
  'pstring' / 'pstrlen.c',
  'pstring' / 'pstrtoz.c',
  'stdio' / '_std.c',
  'stdio' / 'fclose.c',
  'stdio' / 'fflush.c',
  'stdio' / 'fgetc.c',
  'stdio' / 'fopen.c',
  'stdio' / 'fprintf.c',
  'stdio' / 'fputc.c',
  'stdio' / 'fputs.c',
  'stdio' / 'printf.c',
  'stdio' / 'puts.c',
  'stdio' / 'snprintf.c',
  'stdio' / 'sprintf.c',
  'stdio' / 'vfprintf.c',
  'stdio' / 'vprintf.c',
  'stdio' / 'vsnprintf.c',
  'stdio' / 'vsprintf.c',
  'stdlib' / 'calloc.c',
  'stdlib' / 'exit.c',
  'stdlib' / 'free.c',
  'stdlib' / 'malloc.c',
  'stdlib' / 'realloc.c',
  'stdlib' / 'strtol.c',
  'stdlib' / 'strtoll.c',
  'stdlib' / 'strtoul.c',
  'stdlib' / 'strtoull.c',
  'string' / 'memcmp.c',
  'string' / 'memcpy.c',
  'string' / 'memmove.c',
  'string' / 'memset.c',
  'string' / 'strchr.c',
  'string' / 'strcmp.c',
  'string' / 'strcnt.c',
  'string' / 'strcpy.c',
  'string' / 'strlen.c',
  'string' / 'strncpy.c',
  'string' / 'strcspn.c',
  'string' / 'strspn.c',
  'string' / 'strtok.c',
  'syscalls.c',
  'sys' / 'mman' / 'mmap.c',
  'sys' / 'mman' / 'munmap.c',
  'sys' / 'vfs' / 'vfs_msg.c',
  'unistd' / 'getpid.c',
])

libc_includes = files([
  'include' / 'ctype.h',
  'include' / 'errno.h',
  'include' / 'fcall.h',
  'include' / 'fcntl.h',
  'include' / 'limits.h',
  'include' / 'mqueue.h',
  'include' / 'pstring.h',
  'include' / 'stddef.h',
  'include' / 'stdint.h',
  'include' / 'stdio.h',
  'include' / 'stdlib.h',
  'include' / 'syscalls.h',
  'include' / 'sys' / 'mman.h',
  'include' / 'sys' / 'types.h',
  'include' / 'sys' / 'vfs.h',
  'include' / 'unistd.h',
])

libc_inc_directories = include_directories(
  ['include', '..' / '..' / 'include'],
  is_system : true
)

ld_sources = [
  'ld.c',
]

ld = shared_library('ld',
  sources : ld_sources,
  include_directories : libc_inc_directories,
  link_args : ['-nostdlib'],
  install : true,
  name_prefix : '',
)

crt0 = custom_target('crt0',
  input : [ 'crt' / 'crt0.S' ],
  output : [ 'crt0.o' ],
  command : [gcc, '-c', '@INPUT@', '-o', '@BUILD_ROOT@' / 'crt0.o'],
  build_by_default : true,
)

libc = static_library('c',
  sources : libc_sources,
  include_directories : libc_inc_directories,
  link_depends : [ crt0 ],
  c_args : ['-nostdlib'],
  pic : true,
  install : true,
)

libc_dep = declare_dependency(
  include_directories : libc_inc_directories,
  link_with : libc,
)
